=============
Release 0.8.3
=============

* automatic suppression, during meta merging, of noise templates
* during the phy export, we can automatically pre-assign labels to neurons
* fix a bug when converting to phy with dead channels
* fix a bug when converting to phy with file formats without data_offset
* speedup the estimation of the amplitude distribution
* fixes for clusters

=============
Release 0.8.2
=============

* add a docker file to build the software
* add support for shanks in phy 2.0
* add support for deconverting in the qt launcher
* do not create a Qt App if merging in auto mode
* waveforms are convolved with a Hanning window to boost PCA
* oversampling in now adapted as function of the sampling rate
* reduction of I/O while oversampling
* speed improvement with undersampling while cleaning the dictionary
* automation of the software for SpikeForest/SpikeToolkit benchmarks
* merging is now included in the default pipeline
* normalization of the metrics in the meta merging GUI

=============
Release 0.8.0
=============

* major improvement in the clustering. No more max_clusters parameters
* much faster clustering (thanks to Ruben Herzog)
* added the statsmodels library as a required dependency
* enhancement of the smart search mode
* enhancement of the bicubic spline interpolation
* fix a typo when using dead times and the collect mode
* fix a minor bug when small amount of spikes are found during smart search
* fix a bug in the wrapper for BRW files
* support for phy 2.0 and phylib
* remove the strongly time shifted templates
* addition of a wrapper for MDA file format
* amplitudes for unfitted spikes is now 1 when exporting to phy
* default install is now qt5, to work with phy 2.0

=============
Release 0.7.6
=============

* cosmetic changes in the GUI
* adding a deconverting method to switch back from phy to MATLAB
* support for the lags between templates in the MATLAB GUI
* warn user if data are corrupted because of interrupted filtering