@@ -8,6 +8,7 @@ Release 0.8.3
 * fix a bug when converting to phy with file formats without data_offset
 * speedup the estimation of the amplitude distribution
 * fixes for clusters
+* enhancement of the templates thanks to Savitzky-Golay filtering
 
 =============
 Release 0.8.2
